[package]
name = "worktime"
version = "1.0.0"
authors = ["Mathis <handymathis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.4", features = ["chrono", "macros", "migrate", "offline", "postgres", "runtime-actix-rustls", "uuid"] }
rand = "0.8.3"
dotenv = "0.15.0"
log = "0.4"
pretty_env_logger = "0.4"
chrono = "0.4"